--- a/server/package.json
+++ b/server/package.json
@@ -2,11 +2,11 @@
   "name": "safe-the-date",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "app.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "watch": "tsc --watch",
-    "start": "nodemon dist/src/app.js",
+    "start": "nodemon src/app.js",
     "start:static": "node dist/src/app.js",
     "build": "rimraf dist && tsc"
   },
