--- a/server/package.json
+++ b/server/package.json
@@ -1,47 +1,31 @@
 {
-  "name": "safe-the-date",
+  "name": "server",
   "version": "1.0.0",
-  "description": "",
-  "main": "app.ts",
+  "description": "graphql server",
+  "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "watch": "tsc --watch",
-    "start": "nodemon src/app.js",
-    "start:static": "node dist/src/app.js",
-    "build": "rimraf dist && tsc"
+    "start": "nodemon src/index.ts",
+    "start:prod": "node /dist/index.js",
+    "prestart": "npm run build",
+    "build": "tsc",
+    "prebuild": "npm run generate",
+    "generate": "graphql-codegen"
   },
-  "keywords": [],
-  "author": "",
+  "author": "SafeTheDate",
   "license": "ISC",
   "dependencies": {
-    "@types/express-session": "^1.17.6",
-    "bcrypt": "^5.1.0",
-    "class-transformer": "^0.5.1",
-    "class-validator": "^0.14.0",
-    "compression": "^1.7.4",
-    "cookie-parser": "^1.4.6",
-    "cors": "^2.8.5",
-    "dotenv": "^16.0.3",
-    "dotenv-expand": "^10.0.0",
-    "express": "^4.18.2",
-    "helmet": "^6.0.1",
-    "isomorphic-fetch": "^3.0.0",
-    "jsonwebtoken": "^9.0.0",
-    "mongoose": "^7.0.2",
-    "nodemailer": "^6.9.1",
-    "nodemon": "^2.0.20",
-    "reflect-metadata": "^0.1.13",
-    "typescript": "^4.9.5",
-    "uuid": "^9.0.0"
+    "graphql": "^16.6.0",
+    "graphql-yoga": "^3.8.0",
+    "nodemon": "^2.0.22",
+    "ts-node": "^10.9.1"
   },
   "devDependencies": {
-    "@types/bcrypt": "^5.0.0",
-    "@types/compression": "^1.7.2",
-    "@types/cookie-parser": "^1.4.3",
-    "@types/cors": "^2.8.13",
-    "@types/express": "^4.17.17",
-    "@types/jsonwebtoken": "^9.0.1",
-    "@types/nodemailer": "^6.4.7",
-    "@types/uuid": "^9.0.1"
+    "@graphql-codegen/cli": "^3.2.2",
+    "@graphql-codegen/typescript": "^3.0.2",
+    "@graphql-codegen/typescript-resolvers": "^3.1.1",
+    "@graphql-tools/load-files": "^6.6.1",
+    "@types/node": "^18.15.11",
+    "prettier": "^2.8.7",
+    "typescript": "^5.0.2"
   }
 }
