--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -1,35 +1,12 @@
 {
   "compilerOptions": {
-    "target": "es6",
     "module": "commonjs",
-    "rootDir": ".",
-    "lib": ["dom", "es6", "es2017", "ESNext", "esnext.asynciterable"],
-    "sourceMap": true,
-    "outDir": "./dist",
-    "moduleResolution": "node",
-    "strict": true,
-    "importsNotUsedAsValues": "remove",
-    "alwaysStrict": true,
-    "allowUnreachableCode": false,
-    "charset": "utf-8",
-    "skipLibCheck": true,
-    "removeComments": true,
     "noImplicitAny": true,
-    "strictNullChecks": true,
-    "strictPropertyInitialization": false,
-    "strictFunctionTypes": true,
-    "noImplicitThis": true,
-    "noUnusedLocals": false,
-    "noUnusedParameters": false,
-    "noImplicitReturns": true,
-    "resolveJsonModule": true,
-    "noFallthroughCasesInSwitch": true,
-    "allowSyntheticDefaultImports": true,
-    "esModuleInterop": true,
-    "emitDecoratorMetadata": true,
-    "experimentalDecorators": true,
-    "baseUrl": "."
+    "removeComments": true,
+    "preserveConstEnums": true,
+    "outDir": "/dist",
+    "sourceMap": true
   },
-  "exclude": ["node_modules"],
-  "include": ["./src", "./src/**/*.ts"]
+  "include": ["src/**/*"],
+  "exclude": ["node_modules", "**/*.spec.ts"]
 }
