--- a/client/package.json
+++ b/client/package.json
@@ -10,7 +10,11 @@
     "@types/lodash": "^4.14.191",
     "@types/node": "^16.18.11",
     "@types/react": "^18.0.26",
-    "@types/react-dom": "^18.0.10"
+    "@types/react-dom": "^18.0.10",
+    "@typescript-eslint/eslint-plugin": "^5.57.0",
+    "@typescript-eslint/parser": "^5.57.0",
+    "eslint": "^8.36.0",
+    "eslint-plugin-react": "^7.32.2"
   },
   "dependencies": {
     "@emotion/react": "^11.10.5",
@@ -26,6 +30,8 @@
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.10",
     "axios": "^1.2.3",
+    "bcrypt": "^5.1.0",
+    "jsonwebtoken": "^9.0.0",
     "lodash": "^4.17.21",
     "moment": "^2.29.4",
     "notistack": "^2.0.8",
