--- a/client/package.json
+++ b/client/package.json
@@ -14,11 +14,12 @@
     "@types/node": "^16.18.11",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.10",
-    "ts-node": "^10.9.1",
     "@typescript-eslint/eslint-plugin": "^5.57.0",
     "@typescript-eslint/parser": "^5.57.0",
     "eslint": "^8.36.0",
-    "eslint-plugin-react": "^7.32.2"
+    "eslint-plugin-react": "^7.32.2",
+    "ts-node": "^10.9.1",
+    "concurrently": "^8.0.1"
   },
   "dependencies": {
     "@emotion/react": "^11.10.5",
