--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "graphql": "^16.6.0",
     "graphql-yoga": "^3.8.0",
+    "mongoose": "^7.0.3",
     "nodemon": "^2.0.22",
     "ts-node": "^10.9.1"
   },
