--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -5,7 +5,9 @@
     "removeComments": true,
     "preserveConstEnums": true,
     "outDir": "/dist",
-    "sourceMap": true
+    "sourceMap": true,
+    "esModuleInterop": true,
+    "allowSyntheticDefaultImports": true
   },
   "include": ["src/**/*"],
   "exclude": ["node_modules", "**/*.spec.ts"]
