--- a/server/.gitignore
+++ b/server/.gitignore
@@ -1,6 +1,32 @@
-node_modules
-
 # generated types file
 src/graphql/typeDefs/index.ts
 
+# dependencies
+/dist
+/node_modules
+/.pnp
+.pnp.js
+
 .idea
+# testing
+/coverage
+
+# production
+/build
+
+# misc
+.DS_Store
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+# misc
+.DS_Store
+.env
+
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+src/graphql
