--- a/client/package.json
+++ b/client/package.json
@@ -28,6 +28,7 @@
     "@mui/material": "^5.11.3",
     "axios": "^1.2.3",
     "bcrypt": "^5.1.0",
+    "graphql": "^16.6.0",
     "jsonwebtoken": "^9.0.0",
     "lodash": "^4.17.21",
     "moment": "^2.29.4",
