--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
   "author": "SafeTheDate",
   "license": "ISC",
   "dependencies": {
+    "fetch": "^1.1.0",
     "graphql": "^16.6.0",
     "graphql-yoga": "^3.8.0",
     "nodemon": "^2.0.22",
