Fix use of refresh tokens

--- a/auth-server/tsconfig.json
+++ b/auth-server/tsconfig.json
@@ -15,7 +15,7 @@
     "skipLibCheck": true,
     "removeComments": true,
     "noImplicitAny": true,
-    "strictNullChecks": true,
+    "strictNullChecks": false,
     "strictPropertyInitialization": false,
     "strictFunctionTypes": true,
     "noImplicitThis": true,
