--- a/client/package.json
+++ b/client/package.json
@@ -16,12 +16,14 @@
     "@types/react-dom": "^18.0.10",
     "@typescript-eslint/eslint-plugin": "^5.57.0",
     "@typescript-eslint/parser": "^5.57.0",
+    "concurrently": "^8.0.1",
     "eslint": "^8.36.0",
     "eslint-plugin-react": "^7.32.2",
-    "ts-node": "^10.9.1",
-    "concurrently": "^8.0.1"
+    "ts-node": "^10.9.1"
   },
   "dependencies": {
+    "@chatscope/chat-ui-kit-react": "^1.10.1",
+    "@chatscope/chat-ui-kit-styles": "^1.4.0",
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
     "@mui/icons-material": "^5.11.0",
