--- a/server/package.json
+++ b/server/package.json
@@ -21,6 +21,7 @@
     "fetch": "^1.1.0",
     "graphql-yoga": "^3.8.0",
     "mongoose": "^7.0.3",
+    "node-wit": "^6.6.0",
     "nodemon": "^2.0.22",
     "ts-node": "^10.9.1"
   },
