--- a/server/package.json
+++ b/server/package.json
@@ -4,12 +4,12 @@
   "description": "graphql server",
   "main": "server.ts",
   "scripts": {
-    "start": "nodemon src/server.ts",
+    "start": "concurrently --names \"SERVER,CODEGEN\" \"nodemon src/server.ts\" \"npm run generate:watch\"",
     "start:prod": "node /dist/server.js",
-    "prestart": "npm run build",
     "build": "tsc",
     "prebuild": "npm run generate",
-    "generate": "graphql-codegen"
+    "generate": "graphql-codegen",
+    "generate:watch": "graphql-codegen --watch"
   },
   "author": "SafeTheDate",
   "license": "ISC",
@@ -34,6 +34,7 @@
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
     "@types/node": "^18.15.11",
+    "concurrently": "^8.0.1",
     "prettier": "^2.8.7",
     "typescript": "^5.0.2"
   }
