--- a/server/package.json
+++ b/server/package.json
@@ -17,9 +17,10 @@
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "express": "^4.18.2",
-    "graphql": "^16.6.0",
     "fetch": "^1.1.0",
+    "graphql": "^16.6.0",
     "graphql-yoga": "^3.8.0",
+    "lodash": "^4.17.21",
     "mongoose": "^7.0.3",
     "node-wit": "^6.6.0",
     "nodemon": "^2.0.22",
@@ -33,6 +34,7 @@
     "@types/cookie-parser": "^1.4.3",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
+    "@types/lodash": "^4.14.194",
     "@types/node": "^18.15.11",
     "prettier": "^2.8.7",
     "typescript": "^5.0.2"
