--- a/client/package.json
+++ b/client/package.json
@@ -28,6 +28,7 @@
     "@emotion/styled": "^11.10.5",
     "@mui/icons-material": "^5.11.0",
     "@mui/material": "^5.11.3",
+    "@react-oauth/google": "^0.11.0",
     "axios": "^1.2.3",
     "bcrypt": "^5.1.0",
     "graphql": "^16.6.0",
@@ -37,6 +38,7 @@
     "notistack": "^2.0.8",
     "prettier": "^2.8.2",
     "react": "^18.2.0",
+    "react-cookie": "^4.1.1",
     "react-dom": "^18.2.0",
     "react-google-button": "^0.7.2",
     "react-router-dom": "^6.6.1",
