--- a/client/package.json
+++ b/client/package.json
@@ -42,7 +42,9 @@
     "react": "^18.2.0",
     "react-cookie": "^4.1.1",
     "react-dom": "^18.2.0",
+    "react-dropzone-uploader": "^2.11.0",
     "react-google-button": "^0.7.2",
+    "react-images-uploading": "^3.1.7",
     "react-router-dom": "^6.6.1",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.4",
