--- a/auth-server/package.json
+++ b/auth-server/package.json
@@ -15,6 +15,7 @@
   "license": "ISC",
   "dependencies": {
     "@types/express-session": "^1.17.6",
+    "axios": "^1.4.0",
     "bcrypt": "^5.1.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
