--- a/client/package.json
+++ b/client/package.json
@@ -39,6 +39,7 @@
     "moment": "^2.29.4",
     "notistack": "^2.0.8",
     "prettier": "^2.8.2",
+    "qrcode": "^1.5.3",
     "react": "^18.2.0",
     "react-cookie": "^4.1.1",
     "react-dom": "^18.2.0",
