--- a/client/package.json
+++ b/client/package.json
@@ -39,6 +39,7 @@
     "jwt-decode": "^3.1.2",
     "lodash": "^4.17.21",
     "moment": "^2.29.4",
+    "mongoose": "^7.1.1",
     "notistack": "^2.0.8",
     "prettier": "^2.8.2",
     "qrcode": "^1.5.3",
