--- a/server/.env
+++ b/server/.env
@@ -2,4 +2,5 @@ PORT=4000
 DB_CONNECTION_STRING="mongodb+srv://safethedate:safethedate2023@safethedate.ylhxzwn.mongodb.net/?retryWrites=true&w=majority"
 FRONTEND_ENDPOINT="http://localhost:3000"
 BACKEND_ENDPOINT="http://localhost:4000"
+THIRD_PARTY_ENDPOINT="http://localhost:4040"
 BOT_ACCESS_TOKEN="RMO6ITKXK5EE5IBFPO52WDWRDRM75PNZ"
