--- a/client/package.json
+++ b/client/package.json
@@ -31,6 +31,7 @@
     "@mui/material": "^5.11.3",
     "@paypal/react-paypal-js": "^7.8.3",
     "@react-oauth/google": "^0.11.0",
+    "@react-pdf/renderer": "^3.1.9",
     "@zxing/library": "^0.20.0",
     "axios": "^1.2.3",
     "bcrypt": "^5.1.0",
@@ -45,6 +46,7 @@
     "prettier": "^2.8.2",
     "qrcode": "^1.5.3",
     "react": "^18.2.0",
+    "react-datetime": "^3.2.0",
     "react-dom": "^18.2.0",
     "react-dropzone-uploader": "^2.11.0",
     "react-google-button": "^0.7.2",
