--- a/client/package.json
+++ b/client/package.json
@@ -32,6 +32,7 @@
     "@paypal/react-paypal-js": "^7.8.3",
     "@react-oauth/google": "^0.11.0",
     "@react-pdf/renderer": "^3.1.9",
+    "@zxing/browser": "^0.1.3",
     "@zxing/library": "^0.20.0",
     "axios": "^1.2.3",
     "bcrypt": "^5.1.0",
