--- a/auth-server/package.json
+++ b/auth-server/package.json
@@ -25,6 +25,7 @@
     "dotenv": "^16.0.3",
     "dotenv-expand": "^10.0.0",
     "express": "^4.18.2",
+    "express-rate-limit": "^6.7.0",
     "helmet": "^6.0.1",
     "isomorphic-fetch": "^3.0.0",
     "jsonwebtoken": "^9.0.0",
