--- a/server/.env
+++ b/server/.env
@@ -3,3 +3,4 @@ DB_CONNECTION_STRING="mongodb+srv://safethedate:safethedate2023@safethedate.ylhx
 FRONTEND_ENDPOINT="http://localhost:3000"
 BACKEND_ENDPOINT="http://localhost:4000"
 BOT_ACCESS_TOKEN="RMO6ITKXK5EE5IBFPO52WDWRDRM75PNZ"
+NEED_AUTH=true
