--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,7 @@
   "license": "ISC",
   "dependencies": {
     "@whatwg-node/server-plugin-cookies": "^0.0.6",
+    "axios": "^1.4.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "express": "^4.18.2",
