--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -1,11 +1,18 @@
 {
   "compilerOptions": {
-    "module": "commonjs",
-    "noImplicitAny": true,
+    "module": "CommonJS",
+    "noImplicitAny": false,
     "removeComments": true,
     "preserveConstEnums": true,
     "outDir": "/dist",
-    "sourceMap": true
+    "sourceMap": true,
+    "lib": [
+      "decorators",
+      "dom",
+      "es5",
+      "scripthost",
+      "es2015.promise"
+    ]
   },
   "include": ["src/**/*"],
   "exclude": ["node_modules", "**/*.spec.ts"]
