--- a/client/.eslintrc.json
+++ b/client/.eslintrc.json
@@ -19,6 +19,15 @@
     "react/react-in-jsx-scope": "off",
     "react/prop-types": "off",
     "no-constant-condition": "warn",
-    "prefer-const": "warn"
+    "prefer-const": "warn",
+    "@typescript-eslint/ban-types": [
+      "error",
+      {
+        "extendDefaults": true,
+        "types": {
+          "{}": false
+        }
+      }
+    ]
   }
 }
