--- a/client/package.json
+++ b/client/package.json
@@ -49,6 +49,7 @@
     "react": "^18.2.0",
     "react-datetime": "^3.2.0",
     "react-dom": "^18.2.0",
+    "react-draggable": "^4.4.5",
     "react-dropzone-uploader": "^2.11.0",
     "react-google-button": "^0.7.2",
     "react-images-uploading": "^3.1.7",
