--- a/client/package.json
+++ b/client/package.json
@@ -51,10 +51,11 @@
     "react-dom": "^18.2.0",
     "react-draggable": "^4.4.5",
     "react-dropzone-uploader": "^2.11.0",
+    "react-error-boundary": "^4.0.7",
     "react-google-button": "^0.7.2",
     "react-images-uploading": "^3.1.7",
-    "react-qr-reader": "^3.0.0-beta-1",
     "react-qr-code": "^2.0.11",
+    "react-qr-reader": "^3.0.0-beta-1",
     "react-router-dom": "^6.6.1",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.4",
