--- a/server/package.json
+++ b/server/package.json
@@ -25,6 +25,7 @@
     "lodash": "^4.17.21",
     "mongoose": "^7.1.1",
     "node-wit": "^6.6.0",
+    "nodemailer": "^6.9.3",
     "nodemon": "^2.0.22",
     "ts-node": "^10.9.1"
   },
