--- a/server/.env
+++ b/server/.env
@@ -1,7 +1,7 @@
 PORT=4000
 DB_CONNECTION_STRING="mongodb+srv://safethedate:safethedate2023@safethedate.ylhxzwn.mongodb.net/?retryWrites=true&w=majority"
 FRONTEND_ENDPOINT="http://localhost:3000"
-BACKEND_ENDPOINT="http://localhost:4000"
+AUTH_ENDPOINT="http://localhost:5000"
 THIRD_PARTY_ENDPOINT="http://localhost:4040"
 BOT_ACCESS_TOKEN="RMO6ITKXK5EE5IBFPO52WDWRDRM75PNZ"
 NEED_AUTH=true
