--- a/server/package.json
+++ b/server/package.json
@@ -20,6 +20,7 @@
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "fetch": "^1.1.0",
+    "fs": "^0.0.1-security",
     "graphql": "^16.6.0",
     "graphql-yoga": "^3.8.0",
     "lodash": "^4.17.21",
@@ -38,7 +39,7 @@
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
     "@types/lodash": "^4.14.194",
-    "@types/node": "^18.15.11",
+    "@types/node": "^18.16.16",
     "concurrently": "^8.0.1",
     "prettier": "^2.8.7",
     "typescript": "^5.0.2"
