--- a/client/package.json
+++ b/client/package.json
@@ -34,6 +34,7 @@
     "@react-pdf/renderer": "^3.1.9",
     "axios": "^1.2.3",
     "bcrypt": "^5.1.0",
+    "browser-image-compression": "^2.0.2",
     "graphql": "^16.6.0",
     "js-cookie": "^3.0.5",
     "jsonwebtoken": "^9.0.0",
