--- a/server/package.json
+++ b/server/package.json
@@ -9,7 +9,8 @@
     "build": "tsc",
     "prebuild": "npm run generate",
     "generate": "graphql-codegen",
-    "generate:watch": "graphql-codegen --watch"
+    "generate:watch": "graphql-codegen --watch",
+    "test": "jest"
   },
   "author": "SafeTheDate",
   "license": "ISC",
@@ -28,6 +29,7 @@
     "node-wit": "^6.6.0",
     "nodemailer": "^6.9.3",
     "nodemon": "^2.0.22",
+    "ts-jest": "^29.1.0",
     "ts-node": "^10.9.1"
   },
   "devDependencies": {
@@ -38,9 +40,13 @@
     "@types/cookie-parser": "^1.4.3",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
+    "@types/jest": "^29.5.2",
     "@types/lodash": "^4.14.194",
     "@types/node": "^18.16.16",
     "concurrently": "^8.0.1",
+    "jest": "^29.5.0",
+    "jest-cli": "^29.5.0",
+    "jest-html-reporters": "^3.1.4",
     "prettier": "^2.8.7",
     "typescript": "^5.0.2"
   }
