--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,7 @@
   "author": "SafeTheDate",
   "license": "ISC",
   "dependencies": {
+    "@urql/core": "^4.0.10",
     "@whatwg-node/server-plugin-cookies": "^0.0.6",
     "axios": "^1.4.0",
     "cookie-parser": "^1.4.6",
@@ -30,7 +31,8 @@
     "nodemailer": "^6.9.3",
     "nodemon": "^2.0.22",
     "ts-jest": "^29.1.0",
-    "ts-node": "^10.9.1"
+    "ts-node": "^10.9.1",
+    "urql": "^4.0.4"
   },
   "devDependencies": {
     "@graphql-codegen/cli": "^3.2.2",
