--- a/server/.env
+++ b/server/.env
@@ -8,3 +8,4 @@ SMTP_SERVICE="gmail"
 SMTP_AUTH_USER="safethedate123@gmail.com"
 SMTP_AUTH_PASSWORD="txcqrfegztmavubs"
 NEED_AUTH=true
+IS_DEVELOPMENT=true
